tests/integration_tests/snapshots/integration__integration_tests__approval_pty__approval_prompt_decline.snap
---
source: tests/integration_tests/approval_pty.rs
expression: normalized
---
n

🟡 [33m[1m[33mtest-repo[0m[33m needs approval to execute [1m[33m1[0m[33m command:[0m

⚪ post-create:
[107m [0m  [1m[2m[34mecho[0m [2m[32m'test command'[0m[0m

💡 Allow and remember? [1m[y/N][0m 
⚪ Commands declined, continuing worktree creation
✅ [32mCreated new worktree for [1m[32mtest-decline[0m[32m from [1m[32mmain[0m[32m at [1m[32m[REPO]/test-repo.test-decline[0m[0m
💡 [2m[2mRun `wt config shell install` to enable automatic cd[0m[0m
