tests/integration_tests/snapshots/integration__integration_tests__approval_pty__approval_prompt_named_commands.snap
---
source: tests/integration_tests/approval_pty.rs
expression: normalized
---
y

🟡 [33m[1m[33mtest-repo[0m[33m needs approval to execute [1m[33m3[0m[33m commands:[0m

⚪ post-create [1minstall[0m:
[107m [0m  [1m[2m[34mecho[0m [2m[32m'Installing dependencies...'[0m[0m

⚪ post-create [1mbuild[0m:
[107m [0m  [1m[2m[34mecho[0m [2m[32m'Building project...'[0m[0m

⚪ post-create [1mtest[0m:
[107m [0m  [1m[2m[34mecho[0m [2m[32m'Running tests...'[0m[0m

💡 Allow and remember? [1m[y/N][0m 
🔄 [36mRunning post-create [1minstall[0m:[0m
[107m [0m  [1m[2m[34mecho[0m [2m[32m'Installing dependencies...'[0m[0m
[0mInstalling dependencies...
🔄 [36mRunning post-create [1mbuild[0m:[0m
[107m [0m  [1m[2m[34mecho[0m [2m[32m'Building project...'[0m[0m
[0mBuilding project...
🔄 [36mRunning post-create [1mtest[0m:[0m
[107m [0m  [1m[2m[34mecho[0m [2m[32m'Running tests...'[0m[0m
[0mRunning tests...
✅ [32mCreated new worktree for [1m[32mtest-named[0m[32m from [1m[32mmain[0m[32m at [1m[32m[REPO]/test-repo.test-named[0m[0m
💡 [2m[2mRun `wt config shell install` to enable automatic cd[0m[0m
